<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.14">
  <POU Name="AxisPowerOn" Id="{d29dff74-ccf9-49c6-a3da-29ff957c32cd}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM AxisPowerOn
VAR

END_VAR
	
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
//左臂-左电机-PowerOn
axis_LeftArm_Left_Power(
	Axis:= axis_LeftArm_Left, 
	Enable:= bAxis_LeftArm_Left_Enable, 
	Enable_Positive:= TRUE, 
	Enable_Negative:= TRUE, 
	Override:= , 
	BufferMode:= , 
	Options:= , 
	Status=> axis_LeftArm_Left_Power_Output.Done, 
	Busy=> , 
	Error=> , 
	ErrorID=> );
	
	
//左臂-右电机-PowerOn
axis_LeftArm_Right_Power(
	Axis:= axis_LeftArm_Right, 
	Enable:= bAxis_LeftArm_Right_Enable, 
	Enable_Positive:= TRUE, 
	Enable_Negative:= TRUE, 
	Override:= , 
	BufferMode:= , 
	Options:= , 
	Status=> axis_LeftArm_Right_Power_Output.Done, 
	Busy=> , 
	Error=> , 
	ErrorID=> );
	
axis_LeftArm_Lift_Power(
	Axis:= axis_LeftArm_Lift, 
	Enable:= bAxis_LeftArm_Lift_Enable, 
	Enable_Positive:= TRUE, 
	Enable_Negative:= TRUE, 
	Override:= , 
	BufferMode:= , 
	Options:= , 
	Status=> , 
	Busy=> , 
	Error=> , 
	ErrorID=> );

axis_LeftArm_Wrist_Power(
	Axis:= axis_LeftArm_Wrist, 
	Enable:= bAxis_LeftArm_Wrist_Enable, 
	Enable_Positive:= TRUE, 
	Enable_Negative:= TRUE, 
	Override:= , 
	BufferMode:= , 
	Options:= , 
	Status=> , 
	Busy=> , 
	Error=> , 
	ErrorID=> );




//右臂-左电机-PowerOn
axis_RightArm_Left_Power(
	Axis:= axis_RightArm_Left, 
	Enable:= bAxis_RightArm_Left_Enable, 
	Enable_Positive:= TRUE, 
	Enable_Negative:= TRUE, 
	Override:= , 
	BufferMode:= , 
	Options:= , 
	Status=> axis_RightArm_Left_Power_Output.Done, 
	Busy=> , 
	Error=> , 
	ErrorID=> );
	
	
//右臂-右电机-PowerOn
axis_RightArm_Right_Power(
	Axis:= axis_RightArm_Right, 
	Enable:= bAxis_RightArm_Right_Enable, 
	Enable_Positive:= TRUE, 
	Enable_Negative:= TRUE, 
	Override:= , 
	BufferMode:= , 
	Options:= , 
	Status=> axis_RightArm_Right_Power_Output.Done, 
	Busy=> , 
	Error=> , 
	ErrorID=> );

//右臂-升电机-Poweron
axis_RightArm_Lift_Power(
	Axis:= axis_RightArm_Lift, 
	Enable:= bAxis_RightArm_Lift_Enable, 
	Enable_Positive:= TRUE, 
	Enable_Negative:= TRUE, 
	Override:= , 
	BufferMode:= , 
	Options:= , 
	Status=> , 
	Busy=> , 
	Error=> , 
	ErrorID=> );

//右臂-腕电机-Poweron
axis_RightArm_Wrist_Power(
	Axis:= axis_RightArm_Wrist, 
	Enable:= bAxis_RightArm_Wrist_Enable, 
	Enable_Positive:= TRUE, 
	Enable_Negative:= TRUE, 
	Override:= , 
	BufferMode:= , 
	Options:= , 
	Status=> axis_RightArm_Wrist_Power_Output.Done, 
	Busy=> , 
	Error=> , 
	ErrorID=> );
	


	
//大龙门-左电机-上电
axis_BigGate_Left_Power(
	Axis:= axis_BigGate_Left, 
	Enable:= bAxis_BigGate_Left_Enable, 
	Enable_Positive:= TRUE, 
	Enable_Negative:= TRUE, 
	Override:= , 
	BufferMode:= , 
	Options:= , 
	Status=> axis_BigGate_Left_Power_Output.Done, 
	Busy=> , 
	Error=> , 
	ErrorID=> );
	
//大龙门-右电机-上电	
axis_BigGate_Right_Power(
	Axis:= axis_BigGate_Right, 
	Enable:= bAxis_BigGate_Right_Enable, 
	Enable_Positive:= TRUE, 
	Enable_Negative:= TRUE, 
	Override:= , 
	BufferMode:= , 
	Options:= , 
	Status=> axis_BigGate_Right_Power_Output.Done, 
	Busy=> , 
	Error=> , 
	ErrorID=> );

//小龙门-左电机-上电	
axis_SmallGate_Left_Power(
	Axis:= axis_SmallGate_Left, 
	Enable:= bAxis_SmallGate_Left_Enable, 
	Enable_Positive:= TRUE, 
	Enable_Negative:= TRUE, 
	Override:= , 
	BufferMode:= , 
	Options:= , 
	Status=> axis_SmallGate_Left_Power_Output.Done, 
	Busy=> , 
	Error=> , 
	ErrorID=> );
	
//小龙门-右电机-上电	
axis_SmallGate_Right_Power(
	Axis:= axis_SmallGate_Right, 
	Enable:= bAxis_SmallGate_Right_Enable, 
	Enable_Positive:= TRUE, 
	Enable_Negative:= TRUE, 
	Override:= , 
	BufferMode:= , 
	Options:= , 
	Status=> axis_SmallGate_Right_Power_Output.Done, 
	Busy=> , 
	Error=> , 
	ErrorID=> );

//后龙门-左电机-上电	
axis_BackGate_Left_Power(
	Axis:= axis_BackGate_Left, 
	Enable:= bAxis_BackGate_Left_Enable, 
	Enable_Positive:= TRUE, 
	Enable_Negative:= TRUE, 
	Override:= , 
	BufferMode:= , 
	Options:= , 
	Status=> axis_BackGate_Left_Power_Output.Done, 
	Busy=> , 
	Error=> , 
	ErrorID=> );

//后龙门-右电机-上电
axis_BackGate_Right_Power(
	Axis:= axis_BackGate_Right, 
	Enable:= bAxis_BackGate_Right_Enable, 
	Enable_Positive:= TRUE, 
	Enable_Negative:= TRUE, 
	Override:= , 
	BufferMode:= , 
	Options:= , 
	Status=> axis_BackGate_Right_Power_Output.Done, 
	Busy=> , 
	Error=> , 
	ErrorID=> );
	
	]]></ST>
    </Implementation>
    <LineIds Name="AxisPowerOn">
      <LineId Id="177" Count="0" />
      <LineId Id="107" Count="0" />
      <LineId Id="48" Count="10" />
      <LineId Id="31" Count="0" />
      <LineId Id="59" Count="0" />
      <LineId Id="108" Count="1" />
      <LineId Id="61" Count="10" />
      <LineId Id="60" Count="0" />
      <LineId Id="183" Count="0" />
      <LineId Id="185" Count="10" />
      <LineId Id="184" Count="0" />
      <LineId Id="197" Count="11" />
      <LineId Id="196" Count="0" />
      <LineId Id="211" Count="2" />
      <LineId Id="215" Count="28" />
      <LineId Id="271" Count="0" />
      <LineId Id="244" Count="12" />
      <LineId Id="272" Count="0" />
      <LineId Id="257" Count="13" />
      <LineId Id="209" Count="1" />
      <LineId Id="76" Count="0" />
      <LineId Id="110" Count="0" />
      <LineId Id="79" Count="10" />
      <LineId Id="77" Count="0" />
      <LineId Id="111" Count="0" />
      <LineId Id="90" Count="0" />
      <LineId Id="92" Count="10" />
      <LineId Id="91" Count="0" />
      <LineId Id="142" Count="0" />
      <LineId Id="112" Count="0" />
      <LineId Id="114" Count="10" />
      <LineId Id="113" Count="0" />
      <LineId Id="125" Count="0" />
      <LineId Id="144" Count="0" />
      <LineId Id="127" Count="10" />
      <LineId Id="126" Count="0" />
      <LineId Id="169" Count="0" />
      <LineId Id="140" Count="0" />
      <LineId Id="145" Count="10" />
      <LineId Id="141" Count="0" />
      <LineId Id="170" Count="0" />
      <LineId Id="157" Count="11" />
      <LineId Id="156" Count="0" />
      <LineId Id="138" Count="1" />
    </LineIds>
  </POU>
</TcPlcObject>